correction bug transition collapse + correction slider

--- a/src/styles/collapse.scss
+++ b/src/styles/collapse.scss
@@ -45,12 +45,12 @@
     }
 
         &__animation {
-            max-height: 0;
+            max-height: 0px;
             overflow: hidden;
             transition: max-height 0.5s ease-out;
     
             &.open {
-                max-height: 100%;
+                max-height: 350px;
             }
         }
         
